--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <body>
     <header>
         <nav>
-            <a href="#">Menu</a>
-            <a href="#">Contenido</a>
-            <a href="#">Ayuda</a>
-            <a href="#">Contacto</a>
+            <a href="#">Hola</a>
+            <a href="#">Todo</a>
+            <a href="#">Bien</a>
+            <a href="#">Maquina</a>
 
         </nav>
 
     <section class="titulo-principal">
-        <h1>The Best Automatic Farms </h1>
-        <H2>😈😈😈</H2>
+        <h1>Best Automatic Farms</h1>
+        <H2>😈😈</H2>
         <img src="img/minecraft4.png" alt="" class="imagenes-header">
         <div class="bloque">
             <a href="https://www.youtube.com/watch?v=WPiEbYSF9kE" target="_blank"><img src="img/icono1.png" alt="" class="netherite"></a>
@@ -43,7 +43,7 @@
             </div>
         </div>
         </section>
-        <h2 class="titulos1">  <br> THE IRON FARM</h2>
+        <h2 class="titulos1">  <br> IRON FARM</h2>
         <section class="farm2">
             <div class="farm-iron">
                 <img src="img/granjadehierro.png" alt="" class="imagenes1">
@@ -60,7 +60,7 @@
                 </div>
             </div>
         </section>
-        <h2 class="titulos1"> <br> THE MOB FARM</h2>
+        <h2 class="titulos1"> <br> MOB FARM</h2>
 
         <section class="farm3">
             <div class="mob-farm">
