--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="img/icono1.png" type="image/x-icon">
     <link rel="stylesheet" href="papitas.css">
     <link href="https://fonts.googleapis.com/css2?family=Arima:wght@100..700&display=swap" rel="stylesheet">
-    <title> Granjas Automaticas</title>
+    <title> Automatic Farms</title>
 </head>
 <body>
     <header>
